; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_if_me.c_me_hashinit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_if_me.c_me_hashinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.me_list = type { i32 }

@ME_HASH_SIZE = common dso_local global i32 0, align 4
@M_IFME = common dso_local global i32 0, align 4
@M_WAITOK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.me_list* ()* @me_hashinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.me_list* @me_hashinit() #0 {
  %1 = alloca %struct.me_list*, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @ME_HASH_SIZE, align 4
  %4 = sext i32 %3 to i64
  %5 = mul i64 4, %4
  %6 = trunc i64 %5 to i32
  %7 = load i32, i32* @M_IFME, align 4
  %8 = load i32, i32* @M_WAITOK, align 4
  %9 = call %struct.me_list* @malloc(i32 %6, i32 %7, i32 %8)
  store %struct.me_list* %9, %struct.me_list** %1, align 8
  store i32 0, i32* %2, align 4
  br label %10

10:                                               ; preds = %20, %0
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @ME_HASH_SIZE, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %23

14:                                               ; preds = %10
  %15 = load %struct.me_list*, %struct.me_list** %1, align 8
  %16 = load i32, i32* %2, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.me_list, %struct.me_list* %15, i64 %17
  %19 = call i32 @CK_LIST_INIT(%struct.me_list* %18)
  br label %20

20:                                               ; preds = %14
  %21 = load i32, i32* %2, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %2, align 4
  br label %10

23:                                               ; preds = %10
  %24 = load %struct.me_list*, %struct.me_list** %1, align 8
  ret %struct.me_list* %24
}

declare dso_local %struct.me_list* @malloc(i32, i32, i32) #1

declare dso_local i32 @CK_LIST_INIT(%struct.me_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
